# chess-recs-svelte

./: .gitignore  BOARD_FIX_SUMMARY.md  COLLAB_FIX_SUMMARY.md  CONFIG_FIX_SUMMARY.md  DEBUG_502_ERROR.md  DEPLOYMENT_GCP.md  FEN_FIELD_FIX.md  HYBRID_MODEL_ANALYSIS.md  IMAGE_LOADING_FIX.md  PORT_CONFLICT_FIX.md  README.md  VARIABLE_NAME_FIX.md  docker-compose.yml
.agent/workflows/: modern-interactive-development.md
.github/workflows/: deploy-backend.yml
backend-rust/: .gcloudignore  Cargo.toml  Dockerfile
backend-rust/src/: handlers.rs  main.rs  models.rs
frontend-svelte/: .env.example  Dockerfile  EVALUATION_FIX.md  LIQUID_GLASS_REDESIGN.md  MINIMAL_GLASS_REDESIGN.md  TAILWIND_QUICK_REF.md  TAILWIND_V4_GUIDE.md  package-lock.json  package.json
frontend-svelte/src/: app.css
frontend-svelte/src/lib/api/: client.ts  config.ts
frontend-svelte/src/lib/components/: AnimatedSlider.svelte  ChessBoard.svelte  OpeningPicker.svelte  ResultCard.svelte  Skeleton.svelte  ThemeToggle.svelte
frontend-svelte/src/routes/: +error.svelte  +layout.svelte  +page.svelte
services-api/: .dockerignore  .gcloudignore  DEPLOY_CLOUDRUN_GUIDE.md  DEPLOY_COMMANDS.md  Dockerfile  MANUAL_DEPLOY_GUIDE.md  MODELS_DOCUMENTATION.md  debug_fen.py  deploy-cloudrun.sh  requirements.txt  test_predict.py
services-api/app/: config.py  main.py  schemas.py
services-api/app/services/: engine.py
services-api/models/: collaborative_data.pkl
