[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5.0", features = ["cors"] }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"